@@ -31,6 +31,26 @@
             <summary>
             </summary>
             <bugs>
+                <bug id="1648" tool="jira">
+                    <description>
+                        Cyclic inheritence trees can cause srcgen to loop infinitely
+                    </description>
+                    <contributor>
+                        <name>Edward Kuns</name>
+                        <email>edward.kuns@aspect.com</email>
+                    </contributor>
+                    <submitter>
+                        <name>Edward Kuns</name>
+                        <email>edward.kuns@aspect.com</email>
+                    </submitter>
+                    <reporter>
+                        <name>Edward Kuns</name>
+                        <email>edward.kuns@aspect.com</email>
+                    </reporter>
+                    <type>Bug</type>
+                    <module>XML</module>
+                    <date>20061024</date>
+                </bug>
                 <bug id="1658" tool="jira">
                     <description>
                         Clean up compilation complaint -- Java 5 varargs complaint
